# DCFR-SOLVER

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: abstraction.rs  batch.rs  card.rs  cfr.rs  datagen.rs  deck.rs  egt.rs  eval.rs  export.rs  game.rs  infoset.rs  iso.rs  kuhn.rs  lib.rs  main.rs  mccfr.rs  preflop.rs  qre.rs  range.rs  strategy.rs  valuenet.rs
tests/: integration.rs  iso_differential.rs
