[package]
name = "dcfr-solver"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
rayon = "1.10"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
byteorder = "1"
rustc-hash = "2"
memmap2 = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[features]
nn = ["ort"]
i32-arena = []

[dependencies.ort]
version = "2.0.0-rc.11"
optional = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = true
